--- a/doc/通讯录/获取用户信息.md
+++ b/doc/通讯录/获取用户信息.md
@@ -33,6 +33,13 @@
 ```
  {
   "type": 10015,
+  "userName": "wxid_xxx",
+  "chatroomUserName": "xxx@chatroom",
+ }
+```
+```
+ {
+  "type": 10015,
   "userName": ["filehelper", "gh_xxx", "wxid_xxx"]
  } 
 ```
