微信api，新增接口

--- a/doc/发送消息/发送引用消息.md
+++ b/doc/发送消息/发送引用消息.md
@@ -14,14 +14,15 @@
 
 ##### 参数
 
-|参数名|必选|类型|说明|
-|:----    |:---|:----- |-----   |
-|type |是  |int | 接口编号    |
-|userName |是  |string | 接收人wxid    |
-|sourceUserName |否  |string | 源消息发送者wxid，当userName为群聊id时必须提供该字段    |
-|msgSvrID     |是  |int | 引用的消息id    |
-|content     |是  |string | 消息内容    |
-|sourceContent     |是  |string | 引用的消息内容    |
+| 参数名            | 必选 | 类型     | 说明                                |
+|:---------------|:---|:-------|-----------------------------------|
+| type           | 是  | int    | 接口编号                              |
+| userName       | 是  | string | 接收人wxid                           |
+| sourceUserName | 否  | string | 源消息发送者wxid，当userName为群聊id时必须提供该字段 |
+| msgSvrID       | 是  | int    | 引用的消息id                           |
+| content        | 是  | string | 消息内容                              |
+| sourceContent  | 是  | string | 引用的消息内容                           |
+| atUserList     | 否  | list   | 仅当会话为群聊时可用，被艾特的用户wxid列表           |
 
 ##### 请求示例
 
@@ -30,10 +31,11 @@
   "type": 10056,
   "userName": "xxxx@chatroom",
   "sourceUserName": "wxid_xxxx",
-  "content": "22222",
+  "content": "@user1 @user2 22222",
   "msgSvrID": 11111111111111111111,
   "sourceContent": "11111",
- } 
+  "atUserList": ["wxid_xxx1", "wxid_xxx2"],
+ }
 ```
 
 ##### 返回示例 
