--- a/doc/发送消息/转发语音.md
+++ b/doc/发送消息/转发语音.md
@@ -14,14 +14,14 @@
 
 ##### 参数
 
-|参数名|必选|类型|说明|
-|:----    |:---|:----- |-----   |
-|type |是  |int | 接口编号    |
-|userName |是  |string | 接收人wxid    |
-|fileSize     |是  |int | 语音文件大小    |
-|duration     |是  |int | 语音文件时长，单位毫秒  最大60000（即60s）    |
-|fileid     |是  |string | CDN文件id    |
-|aeskey     |是  |string | 解密文件的key    |
+| 参数名           | 必选 | 类型     | 说明                     |
+|:--------------|:---|:-------|------------------------|
+| type          | 是  | int    | 接口编号                   |
+| userName      | 是  | string | 接收人wxid                |
+| rawtotalsize  | 是  | string | 源文件大小，cdn上传接口会返回该字段    |
+| fileid        | 是  | string | fileid，cdn上传接口会返回该字段   |
+| aeskey        | 是  | string | aeskey，cdn上传接口会返回该字段   |
+| voiceduration | 是  | string | 语音时长（ms），cdn上传接口会返回该字段 |
 
 ##### 请求示例
 
