--- a/doc/朋友圈/发布朋友圈.md
+++ b/doc/朋友圈/发布朋友圈.md
@@ -14,10 +14,10 @@
 
 ##### 参数
 
-|参数名|必选|类型|说明|
-|:----    |:---|:----- |-----   |
-|type |是  |int | 接口编号    |
-|objectDesc |是  |string | 朋友圈描述信息，xml形式    |
+| 参数名        | 必选 | 类型     | 说明            |
+|:-----------|:---|:-------|---------------|
+| type       | 是  | int    | 接口编号          |
+| objectDesc | 是  | string | 朋友圈描述信息，xml形式 |
 
 ##### 请求示例
 
@@ -28,7 +28,9 @@
  } 
 ```
 
-##### 返回示例 
+xml详见：[点击查看](https://github.com/kawika-git/wechatSDK)
+
+##### 返回示例
 
 ``` 
   {
