--- a/doc/通讯录/获取用户信息.md
+++ b/doc/通讯录/获取用户信息.md
@@ -17,10 +17,11 @@
 
 ##### 参数
 
-|参数名|必选|类型|说明|
-|:----    |:---|:----- |-----   |
-|type |是  |int | 接口编号    |
-|userName |是  |string, list | 用户wxid或wxid列表    |
+| 参数名              | 必选 | 类型           | 说明                             |
+|:-----------------|:---|:-------------|--------------------------------|
+| type             | 是  | int          | 接口编号                           |
+| userName         | 是  | string, list | 用户wxid或wxid列表                  |
+| chatroomUserName | 否  | string       | 群聊wxid，如果指定了此参数，将会通过群聊获取目标用户信息 |
 
 ##### 请求示例
 
@@ -30,13 +31,19 @@
   "userName": "filehelper",
  } 
 ```
+
 ```
  {
   "type": 10015,
   "userName": "wxid_xxx",
   "chatroomUserName": "xxx@chatroom",
  }
+ 
+ 如果目标用户是群聊，新增返回字段：
+    chatroomMaxCount：指示当前群聊最大群成员数量，
+    chatroomAccessType：当前群聊验证方式(0：无验证，2：需要管理员验证)
 ```
+
 ```
  {
   "type": 10015,
