--- a/doc/群管理/添加群成员.md
+++ b/doc/群管理/添加群成员.md
@@ -14,11 +14,12 @@
 
 ##### 参数
 
-|参数名|必选|类型|说明|
-|:----    |:---|:----- |-----   |
-|type |是  |int | 接口编号    |
-|chatroomUserName |是  |string | 群聊wxid    |
-|userNames     |是  |list | 待邀请wxid列表    |
+| 参数名              | 必选 | 类型     | 说明           |
+|:-----------------|:---|:-------|--------------|
+| type             | 是  | int    | 接口编号         |
+| chatroomUserName | 是  | string | 群聊wxid       |
+| userNames        | 是  | list   | 待邀请wxid列表    |
+| accessMessage    | 否  | string | 用于向管理员发送验证信息 |
 
 ##### 请求示例
 
