--- a/doc/公众号/搜一搜.md
+++ b/doc/公众号/搜一搜.md
@@ -41,7 +41,7 @@
 ```
  {
   "type": 10040,
-  "keyword": "传说中的勇者",
+  "keyword": "AI女友",
   "offset": 0,
   "businessType": 1,
   "h5AuthKey": "xxxxx",
