--- a/doc/群管理/开启-关闭群聊免打扰.md
+++ b/doc/群管理/开启-关闭群聊免打扰.md
@@ -20,6 +20,7 @@
 |type |是  |int | 接口编号    |
 |chatroomUserName |是  |string | 群聊wxid    |
 |isSilence     |是  |bool | 是否免打扰    |
+|isFold     |否  |bool | 是否同时折叠群聊（仅当isSilence为true时生效），默认为false    |
 
 ##### 请求示例
 
@@ -28,7 +29,8 @@
   "type": 10026,
   "chatroomUserName": "xxx@chatroom",
   "isSilence": true,
- } 
+  "isFold": true,
+ }
 ```
 
 ##### 返回示例 
