--- a/doc/通讯录/获取所有好友列表.md
+++ b/doc/通讯录/获取所有好友列表.md
@@ -4,7 +4,8 @@
     
 ##### 简要描述
 
-- 查询数据库。
+- 获取所有好友列表
+- 参考[获取数据库信息](../数据库/获取数据库信息.md)
 
 ##### 请求URL
 - ` http://127.0.0.1:8000/api/`
@@ -24,11 +25,11 @@
 ##### 请求示例
 
 ```
- {
-  "type": 10058,
-  "dbName": "MicroMsg.db",
-  "sql": "select * from sqlite_master where type=\"table\";"
- } 
+{
+ "type": 10058,
+ "dbName": "MicroMsg.db",
+ "sql": "SELECT chl.smallHeadImgUrl, c.UserName, c.Remark, c.nickName FROM Contact c LEFT JOIN ContactHeadImgUrl chl ON c.UserName = chl.usrName;"
+}
 ```
 
 ##### 返回示例 
@@ -40,26 +41,8 @@
     "data": {
       "status": 0,
       "desc": "",
-      "data": []
     }
   }
-```
-##### 常用查询
-```sql
-# 获取联系人，MicroMsg.db
-select * from Contact where (Type&0xff=3 or Type&0xff=1) and VerifyFlag=0 and UserName NOT IN ('medianote','fmessage','floatbottle');
-```
-```sql
-# 获取用户头像，MicroMsg.db
-select smallHeadImgUrl from ContactHeadImgUrl where usrName="filehelper";
-```
-```sql
-# 获取群聊列表，MicroMsg.db
-select * from Contact where Type=2;
-```
-```sql
-# 模糊搜索群聊信息，MicroMsg.db
-SELECT a.UserName,a.NickName,b.smallHeadImgUrl,c.RoomData,c.Reserved2 FROM Contact a INNER JOIN ContactHeadImgUrl b ON a.UserName=b.usrName INNER JOIN ChatRoom c ON c.ChatRoomName=a.UserName WHERE a.nickName like "%某不知名的群" AND a.Type=2;)
 ```
 
 ##### 返回参数说明 
@@ -70,10 +53,9 @@ SELECT a.UserName,a.NickName,b.smallHeadImgUrl,c.RoomData,c.Reserved2 FROM Conta
 |description|string|错误描述|
 |data|json|业务数据|
 
-##### 备注
+##### 备注 
 
 - 更多返回错误代码请看首页的错误代码描述
-
 
 
 
