--- a/doc/readme/更新日志.md
+++ b/doc/readme/更新日志.md
@@ -1,6 +1,9 @@
 ## 📅 更新历史记录
 
 ### 2024年
+- **04月18日**：
+  - 增加了一些新功能api，目前只有部分用户有用到，待反馈后补充API文档
+  - 发布了版本[1.1.8]()
 - **04月11日**：
   - 代码优化，修复了一些bug
   - 稳定性优化
