同步接下来的功能

--- a/doc/readme/更新日志.md
+++ b/doc/readme/更新日志.md
@@ -1,6 +1,13 @@
 ## 📅 更新历史记录
 
 ### 2024年
+- **04月28日**：
+  - 研发中功能：
+    - 发送公众号名片
+    - 发送视频号名片
+    - 发送视频号消息
+    - 修复bug：登录失败时会导致微信退出
+    - 增加API访问秘钥
 - **04月22日**：
   - **解决版本过低无法登录的提示问题**
   - 1.1.8版本的api部分用户测试中，当前较为稳定
