--- a/doc/readme/立即试用.md
+++ b/doc/readme/立即试用.md
@@ -20,9 +20,10 @@
 1. **发送邮件**：
    - **收件人**：[goodluckapis@gmail.com](mailto:goodluckapis@gmail.com)
    - **邮件标题**：任选其一，[邮件标题正确会自动审核]()（一定要留联系方式：手机号/微信）
-      - WechatAPI申请试用-个人版
-      - WechatAPI申请试用-企业版
-      - WechatAPI申请试用-无限版
+      - WechatAPI申请试用-个人（个人用户）
+      - WechatAPI申请试用-企业（企业用户）
+      - WechatAPI申请试用-无限版（不绑定设备/微信，再哪里都能用）
+      - WechatAPI申请试用-源码（学习专用）
 
 2. **等待商务联系**：[请确保邮件中包含手机号/微信号，且可添加好友]()
    - **商务会主动添加您的微信，为您提供技术支持！**
