新增API： 语音视频： - 音视频聊天(发起).md - 音视频聊天(挂断).md 消息处理： - TCP处理器.md - WebSocket处理器.md - 消息设置为已读.md - 消息设置为未读.md 发送消息 - 发送公众号名片.md - 发送视频号名片.md - 发送视频号消息.md 小程序 - 打开小程序.md 浏览器 - 打开浏览器.md 公众号： - 获取H5Key.md 视频号： - 获取热点视频.md 安全： - 设置API访问秘钥.md - 设置虚拟版本号.md 表情包： - 转换wxgf文件.md
修复bug：登录失败时会导致微信退出

--- a/doc/readme/版本说明.md
+++ b/doc/readme/版本说明.md
@@ -61,6 +61,7 @@
 ```
 	- 历史上没有因为软件封过号，懂技术应该了解封号大都是调用频率、内容原因。
 	- 我们对调用频率、内容、网络这类问题提供建议手册
+	- 如发现有除了验证是否有权限以外的任何异常信息上报，请将证据链反馈给我们，送你一次泼天富贵！
 ```
 - **换绑设备/微信**：
 ```
