--- a/doc/快速启动.md
+++ b/doc/快速启动.md
@@ -1,56 +1,41 @@
 ## 💻 前置准备
 
-### 🚀【启动器】为软件：wechatAPI_x.x.x.x.exe
-
-### 1️⃣ 验证启动器是否支持当前系统
-
-   ```
-   - 打开🚀【启动器】如界面显示乱码，则表示**不支持**该系统
-   - 目前已知**不支持**的系统：`arm系统`
-   - 如不支持请更换为`windows 10系统`
-   - 如果系统支持，请推出[启动器]后进行下一步
-   ```
-
-### 2️⃣ 安装指定版本微信
+### 1️⃣ 安装指定版本微信
 
    ```
    - 以下载地址中提供的微信安装包版本号为准
    - 下载地址中提供的是官方版本，如不放心可自行搜索安装该版本的官方安装包
    ```
 
-### 3️⃣ 安装必备的windows依赖
-
-- 安装【环境安装/微软常用运行库合集】
-- 安装【环境安装/vc_redist】(如提示已安装另一个版本，则跳过)
-
-### 4️⃣ 注册并登录启动器
-
-- 打开【🚀启动器】
-- 输入账号密码（随便写，**不要填写微信账号密码**）
-- 点击 [注册账号]
-- 注册后点击 [登录] 按钮进入启动界面
-
 ## 👉开始使用
 
-### 1️⃣ 登录微信
+### 1️⃣ 登录微信 （两种方式，任选其一）
 
-- 打开【🚀启动器】点击登录
-- 点击【启动微信】按钮,先不要着急扫码登录
+#### 界面式登录
+- 下载启动器：API_Launcher_xxxxxx.exe
+- 打开【🚀启动器】，点击【启动微信】
 - 等待【🚀启动器】显示【API已启动】
-   ```
-   如启动器出现【请检查网络是否通畅】请检查电脑时间是否为北京时间
-   ```
 - 扫码登录即可（只有通过这一步启动的号才有api功能）
+
+#### 编程式登录
+
+- 解压[xxxx_rar]
+- 运行demo.py程序(此为python程序，可能需要安装python环境)
+- 扫码登录即可（只有通过这一步启动的号才有api功能）
+
 
 ```
 这时候就已经安装完了
 一个端口号启动的微信就是一个号，登录第一个号后，修改端口，再点击启动就实现了多开，如果你的电脑配置好可以开无数个号
-最佳实践：一台设备登录1-3个号
+但最佳实践：一台设备登录1-3个号
 ```
 
 ### 2️⃣ 调用API接口
 
-- 使用postman、apifox等熟悉的api调用软件按照文档调用接口就好
+- 就使用postman、apifox等熟悉的api调用软件按照文档调用接口即可
+
 - cmd接口测试命令如下，复制命令打开CMD窗口执行，执行结果如下图所示
 - ```curl --location --request POST "http://127.0.0.1:8888/api/" --header "Content-Type: application/json" --data-raw "{ \"type\": 28 }"```
-- [API目录](../menu.md)
+
+
+### **[API目录](../menu.md)**
