--- a/doc/readme/更新日志.md
+++ b/doc/readme/更新日志.md
@@ -1,5 +1,4 @@
-## 📅 更新历史记录
-
+## 📅 更新日志
 ### 2024年
 - **04月28日**：
   - 研发中功能：
@@ -7,7 +6,7 @@
     - 发送视频号名片
     - 发送视频号消息
     - 修复bug：登录失败时会导致微信退出
-    - 增加API访问秘钥
+    - 设置API访问秘钥
 - **04月22日**：
   - **解决版本过低无法登录的提示问题**
   - 1.1.8版本的api部分用户测试中，当前较为稳定
@@ -26,71 +25,71 @@
   - 发布了版本[1.1.6]()
 - **03月25日**：
   - 对WechatAPI的文档结构进行了调整
-  - [查找附近的人](../社交/获取附近的人.md)现在可以使用经纬度来查询附近的人
-  - 现在支持[添加附近的人](../通讯录/添加好友.md)
-  - 现在支持获取[公众号历史推送文章](../公众号/获取历史推送消息.md)
-  - 现在支持[收款码收款提醒](../处理消息/http处理器.md)
+  - [查找附近的人](https://www.wechatsdk.com/docs/社交/获取附近的人.md)现在可以使用经纬度来查询附近的人
+  - 现在支持[添加附近的人](https://www.wechatsdk.com/docs/通讯录/添加好友.md)
+  - 现在支持获取[公众号历史推送文章](https://www.wechatsdk.com/docs/公众号/获取历史推送消息.md)
+  - 现在支持[收款码收款提醒](https://www.wechatsdk.com/docs/处理消息/http处理器.md)
   - 发布了版本[wechatAPI_1.1.5]()
 - **03月19日**：
   - 对API文档进行了更新
   - 修复了部分API接口对企业微信好友不友好的问题
-  - 新增了API：[企业好友信息](../通讯录/获取企业用户信息.md)
+  - 新增了API：[企业好友信息](https://www.wechatsdk.com/docs/通讯录/获取企业用户信息.md)
   - 发布了版本[wechatAPI_1.1.4]()
 - **03月13日**：
   - 更新了使用手册
   - 修复了部分API接口偶尔不能使用的问题
-  - 发布了朋友圈API并增加了防识别扰乱参数：[发布朋友圈](../朋友圈/发布朋友圈.md)，请谨慎使用，部分账号可能会触发风控
+  - 发布了朋友圈API并增加了防识别扰乱参数：[发布朋友圈](https://www.wechatsdk.com/docs/朋友圈/发布朋友圈.md)，请谨慎使用，部分账号可能会触发风控
   - 发布了版本[wechatAPI_1.1.3.f2]()，增强了防封策略，加入了主动扰乱识别机制。
 - **03月06日**：
   - 更新了使用手册
-  - 更新了文档，增加了更多示例：[获取所有好友列表](../通讯录/获取所有好友列表.md)
-  - 新增了API：[获取企业好友昵称](../通讯录/获取企业用户昵称.md)
-  - 新增了API：[获取群列表](../群管理/获取所有群列表.md)
-  - 新增了文档：[微信数据库简述](../数据库/微信数据库简述.md)
+  - 更新了文档，增加了更多示例：[获取所有好友列表](https://www.wechatsdk.com/docs/通讯录/获取所有好友列表.md)
+  - 新增了API：[获取企业用户信息](https://www.wechatsdk.com/docs/通讯录/获取企业用户信息.md)
+  - 新增了API：[获取群列表](https://www.wechatsdk.com/docs/群管理/获取所有群列表.md)
+  - 新增了文档：[微信数据库简述](https://www.wechatsdk.com/docs/数据库/微信数据库简述.md)
   - 发布了版本:[wechatAPI_1.1.3]()，优化了防封机制，增加了避免被识别的机制。
 - **02月21日**：
   - 更新了使用手册
   - 不再支持ARM系统（如打开启动器后乱码，则表示不支持）
-  - 新增了[获取所有好友列表](../通讯录/获取所有好友列表.md)
+  - 新增了[获取所有好友列表](https://www.wechatsdk.com/docs/通讯录/获取所有好友列表.md)
 - **02月18日**：
   - 开工大吉！
   - 发布了修复版:[1.1.2.f1]()，解决了启动器由于电脑因弱网环境崩溃问题，增加了已知避免被识别的机制。
-  - 修复了[微信防撤回通知](../其他功能/开启关闭防撤回.md)接口偶尔不能使用的问题。
-  - 新增了[删除单个消息回调处理器](../处理消息/移除处理器.md)接口
+  - 修复了[微信防撤回通知](https://www.wechatsdk.com/docs/其他功能/开启关闭防撤回.md)接口偶尔不能使用的问题。
+  - 新增了[删除单个消息回调处理器](https://www.wechatsdk.com/docs/处理消息/移除处理器.md)接口
 - **02月04日**：
-  - 修复了[添加群成员到通讯录](../群管理/添加群成员到通讯录.md)接口偶尔出现的异常
-  - 更新了[发送语音条](../发送消息/发送语音.md)接口文档，功能没有变更
+  - 修复了[添加群成员到通讯录](https://www.wechatsdk.com/docs/群管理/添加群成员到通讯录.md)接口偶尔出现的异常
+  - 更新了[发送语音条](https://www.wechatsdk.com/docs/发送消息/发送语音.md)接口文档，功能没有变更
   - 年前最后一次更新，祝大家新年快乐
 - **01月31日**：
-  - 新增了[转发图片.md](../发送消息/转发图片.md)接口。
-  - 新增了[转发文件.md](../发送消息/转发文件.md)接口。
-  - 新增了[转发视频.md](../发送消息/转发视频.md)接口。
-  - 新增了[转发语音.md](../发送消息/转发语音.md)接口。
+  - 新增了[转发图片.md](https://www.wechatsdk.com/docs/发送消息/转发图片.md)接口。
+  - 新增了[转发文件.md](https://www.wechatsdk.com/docs/发送消息/转发文件.md)接口。
+  - 新增了[转发视频.md](https://www.wechatsdk.com/docs/发送消息/转发视频.md)接口。
+  - 新增了[转发语音.md](https://www.wechatsdk.com/docs/发送消息/转发语音.md)接口。
   - 通过好友申请接口新增了scene字段，可以从消息xml中获取。
   - 发布了版本:1.1.2
 - **01月24日**：
-  - 添加了[开启/关闭防撤回](../其他功能/开启关闭防撤回.md)接口。监听到撤回消息时，会将原消息内容一起推送
-  - 新增了[文本翻译](../其他功能/文本翻译.md)接口。
+  - 添加了[开启/关闭防撤回](https://www.wechatsdk.com/docs/其他功能/开启关闭防撤回.md)接口。监听到撤回消息时，会将原消息内容一起推送
+  - 新增了[文本翻译](https://www.wechatsdk.com/docs/其他功能/文本翻译.md)接口。
 - **1月03日**：
-  - 准备发朋友圈接口xml示例 xml详见：[点击查看](https://github.com/WeChatAPIs/wechatSDK)
+  - 准备发朋友圈接口xml示例 xml详见：[点击查看](https://github.com/WeChatApis/wechatSDK)
   - 准备发送小程序xml示例
 
 ### 2023年
 
 - **12月23日**：
   - 后续不再持续支持3.9.2.*版本的新api。现有api将持续支持，有bug会修复。
-  - 修复了[视频号作品解密](../视频号/视频号作品解密.md)
-  - 新增了[发送视频.md](../发送消息/发送视频.md)
-  - 新增了[发送链接.md](../发送消息/发送链接.md)
+  - 修复了[视频号作品解密](https://www.wechatsdk.com/docs/视频号/视频号作品解密.md)
+  - 新增了[发送视频.md](https://www.wechatsdk.com/docs/发送消息/发送视频.md)
+  - 新增了[发送链接.md](https://www.wechatsdk.com/docs/发送消息/发送链接.md)
 - **11月24日**：
-  - [获取用户信息](../通讯录/获取用户信息.md)接口新增了字段，支持通过群聊获取用户信息。
-  - 新增了[添加群成员到通讯录](../群管理/添加群成员到通讯录.md)接口。
-  - 新增了[WebSocket处理器](../处理消息/WebSocket处理器.md)
-  - 新增了[获取消息处理器列表](../处理消息/获取消息处理器列表.md)接口。
-  - 新增了[退出登录](../登录相关/退出登录.md)接口。
+  - [获取用户信息](https://www.wechatsdk.com/docs/通讯录/获取用户信息.md)接口新增了字段，支持通过群聊获取用户信息。
+  - 新增了[添加群成员到通讯录](https://www.wechatsdk.com/docs/群管理/添加群成员到通讯录.md)接口。
+  - 新增了[WebSocket处理器](https://www.wechatsdk.com/docs/处理消息/WebSocket处理器.md)
+  - 新增了[获取消息处理器列表](https://www.wechatsdk.com/docs/处理消息/获取消息处理器列表.md)接口。
+  - 新增了[退出登录](https://www.wechatsdk.com/docs/登录相关/退出登录.md)接口。
   - 消息推送与主动调用格式进行了优化。
   - 修复了多线程调用时的Bug。
-  - 对[获取个人信息](../个人信息/获取个人信息.md)接口进行了优化。
+  - 对[获取个人信息](https://www.wechatsdk.com/docs/个人信息/获取个人信息.md)接口进行了优化。
 - **11月11日**：
   - 优化了退出事件监听。
   - 优化了消息推送。
@@ -98,11 +97,7 @@
   - 新增了一种接口调用方式。
   - 优化了python示例代码。
 - **9月19日**：
-  - 修复了发送文本消息导致微信崩溃的Bug（仅x64版本）。
-- **9月18日**：
-  - 铭记历史，勿忘国耻。
-- **9月17日**：
-  - 修改了编译选项，减少了对运行库的依赖。
+  - 修复了发送文本消息导致微信崩溃的Bug。
 - **9月14日**：
   - 过滤掉部分主动发送消息的推送。
   - 修复了邀请加入群聊接口导致的Bug。
@@ -130,7 +125,6 @@
 - **8月15日**：
   - 修复了cdn下载接口下载文件不完整的Bug。
   - 更新了3.9.5.8164位版本SDK。
-  - wxrpd64.dll部分逻辑进行了更新。
 - **8月10日**：
   - 修复了3.9.5.81版本调用任意接口后触发微信重新登录的Bug。
   - 修复了删除群成员接口无效的Bug。
@@ -140,7 +134,6 @@
   - 修复了查询数据库接口执行错误sql后的Bug。
   - 新增了小程序授权接口。
   - 新增了锁定微信接口。
-  - wxrpd64.dll、pyrpd已知问题进行了修复。
 - **7月20日**：
   - 开放了一系列视频号相关接口。
   - 开放了获取小程序code接口。
@@ -161,3 +154,6 @@
   - 获取用户信息接口添加了remark字段。
   - 优化了批量获取用户信息接口。
   - 修复了http服务崩溃的Bug。
+ 
+**官网**
+[官方网站](https://wechatsdk.com/)
