新增API： 语音视频： - 音视频聊天(发起).md - 音视频聊天(挂断).md 消息处理： - TCP处理器.md - WebSocket处理器.md - 消息设置为已读.md - 消息设置为未读.md 发送消息 - 发送公众号名片.md - 发送视频号名片.md - 发送视频号消息.md 小程序 - 打开小程序.md 浏览器 - 打开浏览器.md 公众号： - 获取H5Key.md 视频号： - 获取热点视频.md 安全： - 设置API访问秘钥.md - 设置虚拟版本号.md 表情包： - 转换wxgf文件.md
修复bug：登录失败时会导致微信退出

--- a/doc/readme/更新日志.md
+++ b/doc/readme/更新日志.md
@@ -1,12 +1,22 @@
 ## 📅 更新日志
 ### 2024年
-- **04月28日**：
-  - 研发中功能：
-    - 发送公众号名片
-    - 发送视频号名片
-    - 发送视频号消息
-    - 修复bug：登录失败时会导致微信退出
-    - 设置API访问秘钥
+- **04月29日**：
+  - 增加[发送公众号名片](https://www.wechatsdk.com/docs/发送消息/发送公众号名片.md)
+  - 增加[发送视频号名片](https://www.wechatsdk.com/docs/发送消息/发送视频号名片.md)
+  - 增加[发送视频号消息](https://www.wechatsdk.com/docs/发送消息/发送视频号消息.md)
+  - 增加[打语音](https://www.wechatsdk.com/docs/发送消息/音视频聊天(发起).md)，只能用作提醒，对方接听后会自动挂断
+  - 增加[打视频](https://www.wechatsdk.com/docs/发送消息/音视频聊天(挂断).md)，只能用作提醒，对方接听后会自动挂断
+  - 增加[TCP服务器](https://www.wechatsdk.com/docs/处理消息/TCP处理器.md)
+  - 增加[消息变已读](https://www.wechatsdk.com/docs/处理消息/消息设置为已读.md)
+  - 增加[消息变未读](https://www.wechatsdk.com/docs/处理消息/消息设置为未读.md)
+  - 增加[打开小程序](https://www.wechatsdk.com/docs/小程序/打开小程序.md)
+  - 增加[打开浏览器](https://www.wechatsdk.com/docs/其他功能/打开浏览器.md)
+  - 增加[获取H5Key](https://www.wechatsdk.com/docs/公众号/获取H5Key.md)
+  - 增加[获得热点视频](https://www.wechatsdk.com/docs/视频号/获取热点视频.md)
+  - 增加[设置API访问密钥](https://www.wechatsdk.com/docs/其他功能/设置API访问秘钥.md)
+  - 增加[转化wxgf文件](https://www.wechatsdk.com/docs/表情包/转换wxgf文件.md)
+  - 修复bug：登录失败时会导致微信退出
+  - 发布新版本[1.1.10]()
 - **04月22日**：
   - **解决版本过低无法登录的提示问题**
   - 1.1.8版本的api部分用户测试中，当前较为稳定
