新增API： 语音视频： - 音视频聊天(发起).md - 音视频聊天(挂断).md 消息处理： - TCP处理器.md - WebSocket处理器.md - 消息设置为已读.md - 消息设置为未读.md 发送消息 - 发送公众号名片.md - 发送视频号名片.md - 发送视频号消息.md 小程序 - 打开小程序.md 浏览器 - 打开浏览器.md 公众号： - 获取H5Key.md 视频号： - 获取热点视频.md 安全： - 设置API访问秘钥.md - 设置虚拟版本号.md 表情包： - 转换wxgf文件.md
修复bug：登录失败时会导致微信退出

--- a/doc/快速启动.md
+++ b/doc/快速启动.md
@@ -27,7 +27,7 @@
 ```
 这时候就已经安装完了
 一个端口号启动的微信就是一个号，登录第一个号后，修改端口，再点击启动就实现了多开，如果你的电脑配置好可以开无数个号
-但最佳实践：一台设备登录1-3个号
+最佳实践：一台设备登录1-3个号
 ```
 
 ### 2️⃣ 调用API接口
