全面支持3.9.10版本

--- a/doc/readme/更新日志.md
+++ b/doc/readme/更新日志.md
@@ -1,5 +1,9 @@
 ## 📅 更新日志
 ### 2024年
+- **05月07日**：
+  - 全面支持3.9.10版本，全量API兼容，公测中
+  - 支持win11、arm等系统
+  - 发布3.9.10版本的[1.0.1]()
 - **04月29日**：
   - 增加[发送公众号名片](https://www.wechatsdk.com/docs/发送消息/发送公众号名片.md)
   - 增加[发送视频号名片](https://www.wechatsdk.com/docs/发送消息/发送视频号名片.md)
@@ -15,6 +19,7 @@
   - 增加[获得热点视频](https://www.wechatsdk.com/docs/视频号/获取热点视频.md)
   - 增加[设置API访问密钥](https://www.wechatsdk.com/docs/其他功能/设置API访问秘钥.md)
   - 增加[转化wxgf文件](https://www.wechatsdk.com/docs/表情包/转换wxgf文件.md)
+  - 增加新的启动方式，不再依赖启动器了
   - 修复bug：登录失败时会导致微信退出
   - 发布新版本[1.1.10]()
 - **04月22日**：
