--- a/doc/readme/立即试用.md
+++ b/doc/readme/立即试用.md
@@ -13,7 +13,7 @@
    - 设备要求：Win7以上系统，建议win10系统
      - 实体Windows电脑 或 云服务器Windows电脑。
    - 微信版本要求：
-       - 3.9.10（即将开放，最后压测中）
+       - 3.9.10（公测中）
        - 3.9.5(推荐，所有API都能用)
        - 3.9.2（不再维护）
 
@@ -22,10 +22,10 @@
 1. **发送邮件**：
    - **收件人**：[goodluckapis@gmail.com](mailto:goodluckapis@gmail.com)
    - **邮件标题**：任选其一，[邮件标题正确会自动审核]()（一定要留联系方式：优先TG, 其他方式联系不及时）
-      - WechatAPI申请试用-个人（个人用户）
-      - WechatAPI申请试用-企业（企业用户）
-      - WechatAPI申请试用-无限版（不绑定设备/微信，在哪里都能用）
-      - WechatAPI申请试用-源码
+       - WechatAPI申请试用-个人用户
+       - WechatAPI申请试用-企业用户
+       - WechatAPI申请试用-无限版（不绑定设备/微信，在哪里都能用）
+       - WechatAPI申请试用-源码（3.9.5版本）
 
 2. **等待商务联系**：[请确保邮件中包含联系方式]()
    - **商务会主动添加您的微信，为您提供技术支持！**
