全面支持3.9.10版本

--- a/doc/readme/立即试用.md
+++ b/doc/readme/立即试用.md
@@ -1,38 +1,52 @@
 # 🚀立即试用 WechatAPI
 
 - 欢迎试用 WechatAPI！我们为你提供了简单易用的工具，帮助你快速接入微信 API。
-- [**版本说明**](版本说明.md)，了解不同版本权益。
 
 ## 👍试用优势
 
-- **免费**：试用版本完全免费，你可以在决定购买前充分体验我们的产品。
 - **全功能**：试用版本包含了我们的所有功能，你可以尽情探索和使用。
+- **最新版本**：支持最新版本，不会被提醒低版本无法登录
+- **稳定**：稳定！我们可以保证不会因为该软件而被封号！
+- **信息安全**：全本地化，不会上传任何信息到服务器
 
+## 📞联系方式
 
-##  🔧 使用必要条件
-   - 设备要求：Win7以上系统，建议win10系统
-     - 实体Windows电脑 或 云服务器Windows电脑。
-   - 微信版本要求：
-       - 3.9.10（公测中）
-       - 3.9.5(推荐，所有API都能用)
-       - 3.9.2（不再维护）
+1. TG: [@wechatsdk](https://t.me/wechatsdk)（唯一账号,谨防被骗）
+2. Email: [goodluckapis@gmail.com](mailto:goodluckapis@gmail.com)
+3. QQ: 暂时关闭
+4. 微信: 展示关闭
 
-## 📋试用步骤
+## 版本说明
 
-1. **发送邮件**：
-   - **收件人**：[goodluckapis@gmail.com](mailto:goodluckapis@gmail.com)
-   - **邮件标题**：任选其一，[邮件标题正确会自动审核]()（一定要留联系方式：优先TG, 其他方式联系不及时）
-       - WechatAPI申请试用-个人用户
-       - WechatAPI申请试用-企业用户
-       - WechatAPI申请试用-无限版（不绑定设备/微信，在哪里都能用）
-       - WechatAPI申请试用-源码（3.9.5版本）
+免费版本：
+1. 合作：基于我们的API开发应用，可按端按月计费（与商务洽谈）
+2. 捐赠：赠送给特定用户，例如独立开发者（在14天试用期内，开发并开源出第一版本，可获得捐赠一台设备）
+付费版本：
+1. 设备版（批量拿货有优惠哦）：绑定设备版，按设备计费，不限制每台设备登录的微信数量
+2. 企业版：不绑定设备，但也不支持个人购买
+3. 源码版：3.9.5版本源码
 
-2. **等待商务联系**：[请确保邮件中包含联系方式]()
-   - **商务会主动添加您的微信，为您提供技术支持！**
-   - **试用过程中遇到任何问题，都可以联系商务解决！**
-3. **开始使用**：
-   - 收到申请反馈邮件后，请查看：[快速启动指南](../快速启动.md)
+## 📞 技术支持
 
-## 💡准备购买？
+- **维护迭代**：
+```
+	全职维护团队。
+```
+- **缺少某些微信API**：
+```
+	免费开发（排期）,付费可提升优先级
+```
+- **新版本升级**：
+```
+无定制业务性功能：
+	- 大版本升级付费20%，小版本免费升级。
+	    - 可选，不升级老版本也可继续使用。
+	- 大版本定义：如支持新版本微信等重大版本更新
+有定制业务性功能：
+	由技术评估升级成本
+```
 
-如果你对我们的试用版本满意，并准备购买正式版本，请与商务沟通
+- **业务性功能定制**：
+```
+	可洽谈。技术评估工作量，报价方案：1500/人/天
+```
