全面支持3.9.10版本

--- a/doc/readme/立即试用.md
+++ b/doc/readme/立即试用.md
@@ -14,7 +14,7 @@
 1. TG: [@wechatsdk](https://t.me/wechatsdk)（唯一账号,谨防被骗）
 2. Email: [goodluckapis@gmail.com](mailto:goodluckapis@gmail.com)
 3. QQ: 暂时关闭
-4. 微信: 展示关闭
+4. 微信: 暂时关闭
 
 ## 版本说明
 
