全面支持3.9.10版本

--- a/doc/readme/立即试用.md
+++ b/doc/readme/立即试用.md
@@ -27,7 +27,7 @@
 
 1. 设备版（批量拿货有优惠哦）：绑定设备版，按设备计费，不限制每台设备登录的微信数量
 2. 企业版：不绑定设备，但也不支持个人购买
-3. 源码版：3.9.5版本源码
+3. 源码版：3.9.5版本源码，最新版本源码暂不出售
 
 ## 📞 技术支持
 
