--- a/doc/readme/立即试用.md
+++ b/doc/readme/立即试用.md
@@ -4,7 +4,7 @@
 
 ## 👍试用优势
 
-- **全功能**：试用版本包含了我们的所有功能，你可以尽情探索和使用。
+- **全功能试用**：试用版本包含了我们的所有功能，你可以尽情探索和使用。
 - **最新版本**：支持最新版本，不会被提醒低版本无法登录
 - **稳定**：稳定！我们可以保证不会因为该软件而被封号！
 - **信息安全**：全本地化，不会上传任何信息到服务器
