--- a/doc/readme/立即试用.md
+++ b/doc/readme/立即试用.md
@@ -11,7 +11,7 @@
 
 ## 📞联系方式
 
-1. TG: [@wechatsdk](https://t.me/wechatsdk)（唯一账号,谨防被骗）
+1. TG: [@wechatsdk](https://t.me/wechatsdk)（唯一账号,谨防被骗）发送：申请试用，即可获得试用资格
 2. Email: [goodluckapis@gmail.com](mailto:goodluckapis@gmail.com)
 3. QQ: 暂时关闭
 4. 微信: 暂时关闭
@@ -24,10 +24,10 @@
 2. 捐赠：赠送给特定用户，例如独立开发者（在14天试用期内，开发并开源出第一版本，可获得捐赠一台设备）
 
 付费版本：
-
-1. 设备版（批量拿货有优惠哦）：绑定设备版，按设备计费，不限制每台设备登录的微信数量
-2. 企业版：不绑定设备，但也不支持个人购买
-3. 源码版：3.9.5版本源码，最新版本源码暂不出售
+1. ~~微信版：绑定微信，不限制微信登录的设备~~（完全杜绝信息上报，不再提供该版本） 
+2. 设备版（批量拿货有优惠哦）：绑定设备版（可换绑），按设备计费，不限制每台设备登录的微信数量 
+3. 企业版：不绑定设备，但也不支持个人购买 
+4. 源码版：3.9.5版本源码，最新版本源码暂不出售
 
 ## 📞 技术支持
 
