全面支持3.9.10版本

--- a/doc/readme/立即试用.md
+++ b/doc/readme/立即试用.md
@@ -4,6 +4,7 @@
 
 ## 👍试用优势
 
+- **免费**：试用版本完全免费，你可以在决定购买前充分体验我们的产品。
 - **全功能试用**：试用版本包含了我们的所有功能，你可以尽情探索和使用。
 - **最新版本**：支持最新版本，不会被提醒低版本无法登录
 - **稳定**：稳定！我们可以保证不会因为该软件而被封号！
