全面支持3.9.10版本

--- a/doc/readme/立即试用.md
+++ b/doc/readme/立即试用.md
@@ -13,7 +13,7 @@
 ## 📞联系方式
 
 1. TG: [@wechatsdk](https://t.me/wechatsdk)（唯一账号,谨防被骗）发送：申请试用，即可获得试用资格
-2. Email: [goodluckapis@gmail.com](mailto:goodluckapis@gmail.com) 邮件标题为以下任一会自动回复试用资格：
+2. Email: [goodluckapis@gmail.com](mailto:goodluckapis@gmail.com) 邮件标题为以下任一会自动回复试用资格：(留联系方式，邮箱不及时，推荐TG)
     1. - WechatAPI申请试用-个人用户
     2. - WechatAPI申请试用-企业用户
 3. QQ: 暂时关闭
