--- a/doc/readme/立即试用.md
+++ b/doc/readme/立即试用.md
@@ -12,7 +12,7 @@
 
 ## 📞联系方式
 
-1. TG: [@wechatsdk](https://t.me/wechatsdk)（唯一账号,谨防被骗）发送：申请试用，即可获得试用资格
+1. TG: [@wechatapibot](https://t.me/wechatapibot)（自助机器人）
 2. Email: [goodluckapis@gmail.com](mailto:goodluckapis@gmail.com) 邮件标题为以下任一会自动回复试用资格：(留联系方式，邮箱不及时，推荐TG)
     1. - WechatAPI申请试用-个人用户
     2. - WechatAPI申请试用-企业用户
