解决3.9.10版本偶发崩溃问题

--- a/doc/readme/更新日志.md
+++ b/doc/readme/更新日志.md
@@ -1,5 +1,13 @@
 ## 📅 更新日志
 ### 2024年
+- **05月13日**：
+  - 登录过程中推送二维码事件（扫描、确认、取消、过期），如有验证码，会在扫描事件中推送。
+  - 修复Bug：启用防撤回会导致下载文件不会正常结束并且自己也无法撤回消息。
+  - [设置API访问密钥](https://www.wechatsdk.com/docs/其他功能/设置API访问秘钥.md)修改参数
+  - 解决登录过程中可能出现的崩溃问题。
+  - 支持win11、arm等系统
+  - 新增[发送企业用户名片](https://www.wechatsdk.com/docs/发送消息/发送企业用户名片.md)接口
+  - 发布3.9.10版本的[1.0.2]()
 - **05月07日**：
   - 全面支持3.9.10版本，全量API兼容，公测中
   - 支持win11、arm等系统
