--- a/doc/发送消息/发送企业用户名片.md
+++ b/doc/发送消息/发送企业用户名片.md
@@ -1,6 +1,6 @@
 #### 简要描述
 
-- 为接口设置一个访问秘钥，后续请求将会验证该秘钥。
+- 发送企业用户名片消息。
 
 #### 请求URL
 
@@ -12,18 +12,20 @@
 
 #### 参数
 
-| 参数名       | 必选 | 类型     | 说明             |   
-|:----------|:---|:-------|----------------|   
-| type      | 是  | int    | 接口编号           |   
-| secretKey | 是  | string | 访问秘钥，留空则后续不再验证 |   
+| 参数名         | 必选 | 类型     | 说明             |   
+|:------------|:---|:-------|----------------|   
+| type        | 是  | int    | 接口编号           |   
+| userName    | 是  | string | 接收人wxid        |   
+| openimUserName | 是  | string | 企业微信用户wxid |   
 
 #### 请求示例
 
 ```
-{
-  "type": 1006,
-  "secretKey": "This is a serect key."
-}
+ {
+  "type": 10110,
+  "userName": "filehelper",
+  "openimUserName": "xxxx@openim"
+ }
 ```
 
 #### 返回示例
@@ -33,7 +35,6 @@
     "data": {
       "status": 0,
       "desc": "",
-      "data": []
     }
   }
 ```
@@ -49,8 +50,6 @@
 #### 备注
 
 - 更多返回错误代码请看[错误代码.md](../错误代码.md)
-
-
 
 
 
