- 新增[数据库获取联系人信息](https://www.wechatsdk.com/docs/数据库/获取联系人信息.md)接口，支持传入列表以获取多个联系人信息，同时可以指定群id，此时会尝试匹配成员在群内的信息。   - 新增[数据库获取群聊信息](https://www.wechatsdk.com/docs/数据库/获取群聊信息.md)接口。   - 新增[数据库获取群聊列表](https://www.wechatsdk.com/docs/数据库/获取群聊列表.md)接口，群很多的话可能会比较慢。   - 新增群聊事件推送（新成员进群、退群、群成员修改群内昵称），该功能默认不启动，可以使用[群聊信息变更通知接口](https://www.wechatsdk.com/docs/群管理/开启-关闭群聊信息变更通知.md)进行开关。   - 收到群消息时，现在会尝试匹配群成员的群内昵称一起推送。   - 获取[群成员详细信息](https://www.wechatsdk.com/docs/群管理/获取群成员详细信息.md)接口，新增version参数，默认为0（获取所有信息），可以通过数据库获取群聊信息接口获取本地version。   - [转换wxgf文件接口](https://www.wechatsdk.com/docs/表情包/转换wxgf文件.md)优化，现在会按照jpg->png->gif的顺序尝试解码，此项更改已同步应用到cdn下载中。   - 发布3.9.10版本的[1.0.4]()

--- a/doc/readme/更新日志.md
+++ b/doc/readme/更新日志.md
@@ -1,5 +1,15 @@
 ## 📅 更新日志
 ### 2024年
+- **05月20日**：
+  - 新增[数据库获取联系人信息](https://www.wechatsdk.com/docs/数据库/获取联系人信息.md)接口，支持传入列表以获取多个联系人信息，同时可以指定群id，此时会尝试匹配成员在群内的信息。
+  - 新增[数据库获取群聊信息](https://www.wechatsdk.com/docs/数据库/获取群聊信息.md)接口。
+  - 新增[数据库获取群聊列表](https://www.wechatsdk.com/docs/数据库/获取群聊列表.md)接口，群很多的话可能会比较慢。
+  - 新增群聊事件推送（新成员进群、退群、群成员修改群内昵称），该功能默认不启动，可以使用[群聊信息变更通知接口](https://www.wechatsdk.com/docs/群管理/开启-关闭群聊信息变更通知.md)进行开关。
+  - 收到群消息时，现在会尝试匹配群成员的群内昵称一起推送。
+  - 获取[群成员详细信息](https://www.wechatsdk.com/docs/群管理/获取群成员详细信息.md)接口，新增version参数，默认为0（获取所有信息），可以通过数据库获取群聊信息接口获取本地version。
+  - [转换wxgf文件接口](https://www.wechatsdk.com/docs/表情包/转换wxgf文件.md)优化，现在会按照jpg->png->gif的顺序尝试解码，此项更改已同步应用到cdn下载中。
+  - 发布3.9.10版本的[1.0.4]()
+### 2024年
 - **05月16日**：
   - 整理API文档目录，新增[安全](https://www.wechatsdk.com/docs/安全)目录
   - 解决已知机型启动微信失败问题
@@ -181,6 +191,6 @@
   - 获取用户信息接口添加了remark字段。
   - 优化了批量获取用户信息接口。
   - 修复了http服务崩溃的Bug。
- 
+
 **官网**
 [官方网站](https://www.wechatsdk.com/)
