--- a/doc/readme/立即试用.md
+++ b/doc/readme/立即试用.md
@@ -13,9 +13,10 @@
 ## 📞联系方式
 
 1. TG: [@wechatapibot](https://t.me/wechatapibot)（自助机器人）
-2. Email: [goodluckapis@gmail.com](mailto:goodluckapis@gmail.com) 邮件标题为以下任一会自动回复试用资格：(留联系方式，邮箱不及时，推荐TG)
-    1. - WechatAPI申请试用-个人用户
-    2. - WechatAPI申请试用-企业用户
+2. Email: [goodluckapis@gmail.com](mailto:goodluckapis@gmail.com) 
+   1. - 邮件标题为以下任一会自动回复试用资格(留联系方式，邮箱不及时，推荐TG)：
+   2. - WechatAPI申请试用-个人用户
+   3. - WechatAPI申请试用-企业用户
 3. QQ: 暂时关闭
 4. 微信: 暂时关闭
 
@@ -24,12 +25,12 @@
 免费版本：
 
 1. 合作：基于我们的API开发应用，可按端按月计费（与商务洽谈）
-2. 捐赠：赠送给特定用户，例如独立开发者（在14天试用期内，开发并开源出第一版本，可获得捐赠一台设备）
+2. 捐赠：赠送给特定用户，例如独立开发者（在14天试用期内，开发并开源出第一版本，可获得捐赠一台设备，我们有渠道（免费）帮您推广项目哦~）
 
 付费版本：
-1. ~~微信版：绑定微信，不限制微信登录的设备~~（完全杜绝信息上报，不再提供该版本） 
-2. 设备版（批量拿货有优惠哦）：绑定设备版（可换绑），按设备计费，不限制每台设备登录的微信数量 
-3. 企业版：不绑定设备，但也不支持个人购买 
+1. ~~微信版：绑定微信，不限制微信登录的设备~~（完全杜绝信息上报，不再提供该版本）
+2. 设备版（批量拿货有优惠哦）：绑定设备版（可换绑），按设备计费，不限制每台设备登录的微信数量
+3. 企业版：不绑定设备，但也不支持个人购买
 4. 源码版：3.9.5版本源码，最新版本源码暂不出售
 
 ## 📞 技术支持
