--- a/doc/发送消息/发送文本.md
+++ b/doc/发送消息/发送文本.md
@@ -30,6 +30,15 @@
     "wxid_xxxx1"
   ]
  } 
+
+@所有人
+
+{
+  "type": 10009,
+  "userName": "xxxx@chatrooom",
+  "msgContent": "@所有人 123",
+   atUserList: ["notify@all"]
+ } 
 ```
 
 #### 返回示例 
