--- a/doc/快速启动.md
+++ b/doc/快速启动.md
@@ -12,6 +12,7 @@
 ### 1️⃣ 登录微信 （两种方式，任选其一）
 
 #### 界面式登录
+（某些windows电脑可能会报毒，这是exe打包方式的问题，如果不放心可以使用另一种方式启动）
 - 下载启动器：API_Launcher_xxxxxx.exe
 - 打开【🚀启动器】，点击【启动微信】
 - 等待【🚀启动器】显示【API已启动】
