--- a/doc/数据库/获取群聊信息.md
+++ b/doc/数据库/获取群聊信息.md
@@ -1,6 +1,6 @@
 #### 简要描述
 
-- 设置虚拟版本号，用于解决部分帐号提示版本过低无法登录。该功能对部分帐号可能无效。
+- 从数据库获取群聊信息，此接口会返回全部群成员信息。
 
 #### 请求URL
 
@@ -12,18 +12,18 @@
 
 #### 参数
 
-| 参数名     | 必选 | 类型     | 说明    |   
-|:--------|:---|:-------|-------|   
-| type    | 是  | int    | 接口编号  |   
-| version | 是  | string | 虚拟版本号 |   
+| 参数名              | 必选 | 类型     | 说明   |   
+|:-----------------|:---|:-------|------|   
+| type             | 是  | int    | 接口编号 |   
+| chatroomUserName | 是  | string | 群聊id |   
 
 #### 请求示例
 
 ```
-{
-  "type": 1005,
-  "version": "3.9.10.19",
-}
+ {
+  "type": 10113,
+  "chatroomUserName": "xxxx@chatroom"
+ }
 ```
 
 #### 返回示例
@@ -49,7 +49,6 @@
 #### 备注
 
 - 更多返回错误代码请看[错误代码.md](../错误代码.md)
-
 
 
 
