--- a/doc/群管理/开启-关闭群聊信息变更通知.md
+++ b/doc/群管理/开启-关闭群聊信息变更通知.md
@@ -1,6 +1,9 @@
 #### 简要描述
 
-- 设置虚拟版本号，用于解决部分帐号提示版本过低无法登录。该功能对部分帐号可能无效。
+- 开启后，会在以下场景推送通知，推送类型可查看消息类型页面。
+  1、新人入群
+  2、退群
+  3、群成员修改了群内昵称
 
 #### 请求URL
 
@@ -12,18 +15,18 @@
 
 #### 参数
 
-| 参数名     | 必选 | 类型     | 说明    |   
-|:--------|:---|:-------|-------|   
-| type    | 是  | int    | 接口编号  |   
-| version | 是  | string | 虚拟版本号 |   
+| 参数名     | 必选 | 类型   | 说明           |   
+|:--------|:---|:-----|--------------|   
+| type    | 是  | int  | 接口编号         |   
+| bEnable | 是  | bool | 是否启用群聊信息变更通知 |   
 
 #### 请求示例
 
 ```
-{
-  "type": 1005,
-  "version": "3.9.10.19",
-}
+ {
+  "type": 10115,
+  "bEnable": true
+ }
 ```
 
 #### 返回示例
