--- a/doc/群管理/获取群成员详细信息.md
+++ b/doc/群管理/获取群成员详细信息.md
@@ -11,10 +11,11 @@
 
 #### 参数
 
-| 参数名              | 必选 | 类型     | 说明     |   
-|:-----------------|:---|:-------|--------|   
-| type             | 是  | int    | 接口编号   |   
-| chatroomUserName | 是  | string | 群聊wxid |   
+| 参数名              | 必选 | 类型     | 说明                       |   
+|:-----------------|:---|:-------|--------------------------|   
+| type             | 是  | int    | 接口编号                     |   
+| chatroomUserName | 是  | string | 群聊wxid                   |   
+| version          | 否  | int    | 指定从哪个版本号开始获取 默认0（获取所有信息） |   
 
 #### 请求示例
 
