--- a/doc/视频号/获取热点视频.md
+++ b/doc/视频号/获取热点视频.md
@@ -15,8 +15,8 @@
 | 参数名       | 必选 | 类型     | 说明                            |   
 |:----------|:---|:-------|-------------------------------|   
 | type      | 是  | int    | 接口编号                          |   
-| longitude | 是  | double | 经度                            |   
-| latitude  | 是  | double   | 纬度                            |   
+| longitude | 是  | string | 经度                            |   
+| latitude  | 是  | bool   | 纬度                            |   
 | feedId    | 否  | bool   | 视频号作品id，提供此参数将会返回与该作品相关的热搜词列表 |   
 
 #### 请求示例
