--- a/doc/数据库/获取群聊列表.md
+++ b/doc/数据库/获取群聊列表.md
@@ -1,32 +1,30 @@
+
 #### 简要描述
 
-- 设置虚拟版本号，用于解决部分帐号提示版本过低无法登录。该功能对部分帐号可能无效。
+- 从数据库获取全部群聊信息（包括群成员信息）。
+- 群聊数量较多时可能比较慢，已尽量优化时间复杂度，实测63个群在1s内得到结果。
 
 #### 请求URL
-
 - ` http://127.0.0.1:8888/api/`
-
+  
 #### 请求方式
-
-- POST
+- POST 
 
 #### 参数
 
-| 参数名     | 必选 | 类型     | 说明    |   
-|:--------|:---|:-------|-------|   
-| type    | 是  | int    | 接口编号  |   
-| version | 是  | string | 虚拟版本号 |   
+| 参数名  | 必选 | 类型  | 说明   |   
+|:-----|:---|:----|------|   
+| type | 是  | int | 接口编号 |   
 
 #### 请求示例
 
 ```
-{
-  "type": 1005,
-  "version": "3.9.10.19",
-}
+ {
+  "type": 10114
+ }
 ```
 
-#### 返回示例
+#### 返回示例 
 
 ``` 
   {
@@ -38,7 +36,7 @@
   }
 ```
 
-#### 返回参数说明
+#### 返回参数说明 
 
 | 参数名         | 类型     | 说明   |   
 |:------------|:-------|------|   
@@ -46,10 +44,9 @@
 | description | string | 错误描述 |   
 | data        | json   | 业务数据 |   
 
-#### 备注
+#### 备注 
 
 - 更多返回错误代码请看[错误代码.md](../错误代码.md)
-
 
 
 
