--- a/doc/发送消息/发送图片.md
+++ b/doc/发送消息/发送图片.md
@@ -25,6 +25,10 @@
   "userName": "filehelper",
   "filePath": "C:\\xxx.jpg"
  } 
+为什么发不出去图片？
+ 1、有些图片是走的协议，可能不会在电脑端出现，手机端会出现，对方也能看到
+ 2、路径必须是登录该微信的电脑（本地调用远程别把本地的路径填上去）
+ 
 ```
 
 #### 返回示例 
