--- a/doc/发送消息/发送引用消息.md
+++ b/doc/发送消息/发送引用消息.md
@@ -33,6 +33,8 @@
   "sourceContent": "11111",
   "atUserList": ["wxid_xxx001", "wxid_xxx002"]
  }
+ 为什么发不出去？
+ 1、走的协议，不会在电脑端出现，手机端会出现，对方也能看到
 ```
 
 #### 返回示例 
