--- a/doc/发送消息/发送文件.md
+++ b/doc/发送消息/发送文件.md
@@ -25,6 +25,10 @@
   "userName": "filehelper",
   "filePath": "C:\\xxx.txt" # 历史遗留问题，路径是\\,不是\
  } 
+为什么发不出去文件？
+ 1、有些文件是走的协议，可能不会在电脑端出现，手机端会出现
+ 2、文件路径必须是登录该微信的电脑（本地调用远程别把本地的路径填上去）
+ 
 ```
 
 #### 返回示例 
