--- a/doc/发送消息/发送语音.md
+++ b/doc/发送消息/发送语音.md
@@ -25,6 +25,9 @@
   "userName": "filehelper",
   "filePath": "C:\\xxx.silk" # 历史遗留问题，路径是\\,不是\
  } 
+ 
+ 不能超过官方允许的时长
+ 
 ```
 音频转slik工具：[点击跳转](https://gitee.com/lemisky/pilk)
 #### 返回示例 
