--- a/doc/小程序/打开小程序.md
+++ b/doc/小程序/打开小程序.md
@@ -28,6 +28,7 @@
   bizUserName: 'gh_fb3b292999ba@app',
   pageUrl: '?invite_code=123456&from=groupmessage'
 }
+# 部分账号可能只能打开之前打开过的小程序，如果发现打不开，可以先手动打开一次小程序
 ```
 
 #### 返回示例
