--- a/doc/快速启动.md
+++ b/doc/快速启动.md
@@ -18,6 +18,23 @@
 - 等待【🚀启动器】显示【API已启动】
 - 扫码登录即可（只有通过这一步启动的号才有api功能）
 
+ps: 如果你在启动器同目录下有一个名为[wechatAPI.json]()的文件，则每次启动微信都会默认设置一些内容
+
+```
+仅限3.9.10版本微信 1.0.4.f1及以上版本启动器有效
+{
+  "httpCallbackUrl": "http://127.0.0.1:18000/wechatSDK",
+  "wsCallbackUrl": "ws://127.0.0.1:18001/wechatSDK",
+  "secretKey": "",
+  "chatroomModifyFlag": true
+}
+字段解释说明:
+httpCallbackUrl: http消息回调地址，如果不设置可以删除这个字段
+wsCallbackUrl: ws消息回调地址，如果不设置可以删除这个字段
+chatroomModifyFlag: 是否开启群聊信息变更通知事件，默认不开启，如果不设置可以删除这个字段
+secretKey：api接口安全秘钥，默认不设置，如果不设置可以删除这个字段，如果设置了：后续调用任何api都需要额外传入该字段，用于校验请求合法性
+```
+
 #### 编程式登录
 
 - 解压[xxxx_rar]
