--- a/doc/朋友圈/发布朋友圈.md
+++ b/doc/朋友圈/发布朋友圈.md
@@ -1,7 +1,8 @@
 
 #### 简要描述
 
-- 发布朋友圈，部分账号可能会被风控，请谨慎使用
+- 发布朋友圈，
+- 部分账号可能会被风控，请谨慎使用
 
 #### 请求URL
 - ` http://127.0.0.1:8888/api/`
@@ -27,6 +28,7 @@
   "type": 4,
   "objectDesc": "<TimelineObject>...</TimelineObject>"
  } 
+- 部分账号可能会被风控，请谨慎使用
 ```
 
 xml详见：[点击查看](https://github.com/WeChatAPIs/wechatSDK)
