--- a/doc/群管理/开启-关闭群聊信息变更通知.md
+++ b/doc/群管理/开启-关闭群聊信息变更通知.md
@@ -1,9 +1,9 @@
 #### 简要描述
 
 - 开启后，会在以下场景推送通知，推送类型可查看消息类型页面。
-  1、新人入群
-  2、退群
-  3、群成员修改了群内昵称
+  - 1、新人入群
+  - 2、退群
+  - 3、群成员修改了群内昵称
 
 #### 请求URL
 
