--- a/doc/群管理/群聊邀请验证.md
+++ b/doc/群管理/群聊邀请验证.md
@@ -23,6 +23,8 @@
   "type": 10089,
   "url": "https://szsupport.weixin.qq.com/cgi-bin/mmsupport-bin/addchatroombyinvite?ticket=..."
  } 
+ 
+ 先请求10089获取到链接，然后要主动post一下
 ```
 
 #### 返回示例 
