--- a/doc/通讯录/通过好友申请.md
+++ b/doc/通讯录/通过好友申请.md
@@ -26,6 +26,14 @@
   "encryptUserName": "v3_xxxx",
   "ticket": "v4_xxxx"
  } 
+ 
+ 如出现user ticket invalid错误，请添加scene参数
+ {
+  "type": 10035,
+  "encryptUserName": "v3_xxxx",
+  "ticket": "v4_xxxx"
+  "scene":xxxx # int类型
+ }
 ```
 
 #### 返回示例 
