--- a/doc/readme/立即试用.md
+++ b/doc/readme/立即试用.md
@@ -2,36 +2,37 @@
 
 - 欢迎试用 WechatAPI！我们为你提供了简单易用的工具，帮助你快速接入微信 API。
 
-## 👍试用优势
+## 👍我们的优势
 
-- **免费**：试用版本完全免费，你可以在决定购买前充分体验我们的产品。
-- **全功能试用**：试用版本包含了我们的所有功能，你可以尽情探索和使用。
+- **免费试用**：你可以在决定购买前充分体验我们的产品。
+- **全功能免费试用**：试用版本包含了我们的所有功能，你可以尽情探索和使用。
 - **最新版本**：支持最新版本，不会被提醒低版本无法登录
 - **稳定**：稳定！我们可以保证不会因为该软件而被封号！
 - **信息安全**：全本地化，不会上传任何信息到服务器
 
-## 📞联系方式
+## 📞申请试用
 
 1. TG: [@wechatapibot](https://t.me/wechatapibot)（自助机器人）
 2. Email: [goodluckapis@gmail.com](mailto:goodluckapis@gmail.com) 
-   1. - 邮件标题为以下任一会自动回复试用资格(留联系方式，邮箱不及时，推荐TG)：
-   2. - WechatAPI申请试用-个人用户
-   3. - WechatAPI申请试用-企业用户
+   - 邮件标题为以下任一会自动回复试用资格(留联系方式，邮箱可能会不及时，推荐TG)：
+   1. - WechatAPI申请试用-个人用户
+   2. - WechatAPI申请试用-企业用户
 3. QQ: 暂时关闭
 4. 微信: 暂时关闭
 
-## 版本说明
+
+## 版本说明 记得下载最新版本启动器哈
 
 免费版本：
 
 1. 合作：基于我们的API开发应用，可按端按月计费（与商务洽谈）
-2. 捐赠：赠送给特定用户，例如独立开发者（在14天试用期内，开发并开源出第一版本，可获得捐赠一台设备，我们有渠道（免费）帮您推广项目哦~）
+2. 捐赠：赠送给特定用户，例如独立开发者（在14天试用期内，开发并开源出第一版本（如果项目没亮点就别考虑了），可获得捐赠一台设备，我们有渠道（免费）帮您推广项目哦~）
 
 付费版本：
 1. ~~微信版：绑定微信，不限制微信登录的设备~~（完全杜绝信息上报，不再提供该版本）
-2. 设备版（批量拿货有优惠哦）：绑定设备版（可换绑），按设备计费，不限制每台设备登录的微信数量
-3. 企业版：不绑定设备，但也不支持个人购买
-4. 源码版：3.9.5版本源码，最新版本源码暂不出售
+2. 设备授权（批量采购有优惠哦）：设备授权（可换绑），按设备授权数量计费，不限制每台设备同时登录的微信数量
+3. 无限版：不绑定设备，任何电脑都可以用，但也不支持个人用户购买
+4. 源码：出售3.9.5版本的源码
 
 ## 📞 技术支持
 
