--- a/doc/发送消息/发送文本.md
+++ b/doc/发送消息/发送文本.md
@@ -11,12 +11,13 @@
 
 #### 参数
 
-| 参数名        | 必选 | 类型     | 说明        |   
-|:-----------|:---|:-------|-----------|   
-| type       | 是  | int    | 接口编号      |   
-| userName   | 是  | string | 接收人wxid   |   
-| msgContent | 是  | string | 文本内容      |   
-| atUserList | 否  | list   | 被艾特wxid列表 |   
+| 参数名              | 必选 | 类型     | 说明                                                                       |   
+|:-----------------|:---|:-------|--------------------------------------------------------------------------|   
+| type             | 是  | int    | 接口编号                                                                     |   
+| userName         | 是  | string | 接收人wxid                                                                  |   
+| msgContent       | 是  | string | 文本内容                                                                     |   
+| atUserList       | 否  | list   | 被艾特wxid列表                                                                |   
+| insertToDatabase | 否  | bool   | 是否将消息回写到数据库中，默认为true，<br/>如果您发现某些电脑出现阻塞可设置为false<br/>该参数在1.0.4.f2及以上版本出现 |   
 
 #### 请求示例
 
@@ -24,13 +25,18 @@
 {
   "type": 10009,
   "userName": "xxxx@chatrooom",
-  "msgContent": "123",
+  "msgContent": "@xxx 123",
   "atUserList": [
     "wxid_xxxx1",
     "wxid_xxxx1"
-  ]
+  ],
+  "insertToDatabase":false
  } 
-
+ 为什么@人没有效果？
+ 1、msgContent里要加上 @对方昵称 这些内容
+ 为什么你们不直接把@xxx这一步做好
+ 1、不知道放在哪个位置，有些人要放在最前面，有些人要最后面，有些人想在中间，众口难调，自行处理
+ 
 @所有人
 
 {
@@ -39,6 +45,9 @@
   "msgContent": "@所有人 123",
    atUserList: ["notify@all"]
  } 
+ 为什么@所有人没有效果？
+ 1、检查是不是管理员
+ 2、msgContent里有没有【@所有人】这几个字符
 ```
 
 #### 返回示例 
