--- a/doc/发送消息/转发语音.md
+++ b/doc/发送消息/转发语音.md
@@ -23,6 +23,11 @@
 #### 请求示例
 
 ```
+具体如何使用？
+1、接收别人的语音slik文件，下载到本地
+2、调用cdn上传接口，获取cdn返回的参数
+3、调用该接口
+如果是一个语音slik给好多人发，只需要调用一次cdn上传接口，然后调用该接口就行了
  {
   "type": 10099,
   "userName": "filehelper",
