--- a/doc/视频号/视频号作品解密.md
+++ b/doc/视频号/视频号作品解密.md
@@ -1,23 +1,40 @@
-
 #### 简要描述
 
-- 下载后的视频是加密的，提供此接口用于解密。
+- 下载后的视频/图片是加密的，提供此接口用于解密。
 
 #### 请求URL
+
 - ` http://127.0.0.1:8888/api/`
-  
+
 #### 请求方式
-- POST 
+
+- POST
 
 #### 参数
 
-| 参数名        | 必选 | 类型     | 说明                         |   
-|:-----------|:---|:-------|----------------------------|   
-| type       | 是  | int    | 接口编号                       |   
-| inputFile  | 是  | string | 已下载的加密视频绝对路径               |   
-| outputFile | 是  | string | 保存解密视频的绝对路径，需要包含文件名        |   
-| decodeKey  | 是  | int    | 获取作品列表接口会返回该字段             |   
-| encLength  | 是  | int    | 视频被加密的长度，下载视频时的header包含该字段 |   
+| 参数名        | 必选 | 类型     | 说明                                                                           |   
+|:-----------|:---|:-------|------------------------------------------------------------------------------|   
+| type       | 是  | int    | 接口编号                                                                         |   
+| inputFile  | 是  | string | 已下载的加密视频绝对路径，也可以是朋友圈视频或图片                                                    |   
+| outputFile | 是  | string | 保存解密文件的绝对路径，需要包含文件名                                                          |   
+| decodeKey  | 是  | int    | 获取作品列表接口会返回该字段或包含在朋友圈的xml中                                                   |   
+| encLength  | 是  | int    | 视频被加密的长度，下载视频时的header包含该字段，<br/>若是朋友圈图片视频这类等：文件大小小于131072，则传入文件大小，否则为：131072 |   
+
+#### 常见问题
+
+```
+视频图片如何下载？
+1、视频号视频
+url + token以GET方式下载。
+2、朋友圈视频
+url + "?" + "token=" + token + "&idx=1"以GET方式下载，需要设置UA：MicroMessenger Client。
+3、朋友圈视频缩略图
+直接GET下载。
+4、朋友圈图片
+直接GET下载。
+
+注：部分朋友圈视频可能没有加密，可以根据xml中是否包含enc key来判断。
+```
 
 #### 请求示例
 
@@ -27,11 +44,11 @@
   "inputFile": "C:\\xxx.data",
   "outputFile": "C:\\xxx.mp4",
   "decodeKey": 1234567890,
-  "encLength": 0x20000
+  "encLength": 131072
  } 
 ```
 
-#### 返回示例 
+#### 返回示例
 
 ``` 
   {
@@ -43,7 +60,7 @@
   }
 ```
 
-#### 返回参数说明 
+#### 返回参数说明
 
 | 参数名         | 类型     | 说明   |   
 |:------------|:-------|------|   
@@ -51,7 +68,7 @@
 | description | string | 错误描述 |   
 | data        | json   | 业务数据 |   
 
-#### 备注 
+#### 备注
 
 - 更多返回错误代码请看[错误代码.md](../错误代码.md)
 
