- **05月29日**：   - 尝试修复一个Bug，该Bug曾导致：个别电脑消息发送量大时出现消息阻塞的情况。（该现象与电脑配置有关）   - 优化API:[检测链接是否被封禁](../安全/检测链接是否被封禁.md)。   - 发布3.9.10版本的[1.0.4.f3]() - **05月27日**：   - 修复了一个Bug，该Bug曾导致：个别电脑消息量大时出现[发送文本](../发送消息/发送文本.md)消息阻塞的情况。   - [下载朋友圈图片](../朋友圈/下载朋友圈图片视频.md)文档整理。   - 对于经常碰到的问题的API整理下了文档，关于如何接收消息请参考：[http消息处理器](../处理消息/http处理器.md)下方的代码示例，如果是远程推送则推荐ws协议。   - 发布3.9.10版本的[1.0.4.f2]() - **05月24日**：   - 修复了一个Bug，该Bug曾导致：调用[cdn下载](../CDN/CDN下载.md)接口下载图片报错400。   - [设置API访问秘钥](../安全/设置API访问秘钥.md)接口所需参数名修改为newSecretKey，现在可以正确的取消访问秘钥。   - [视频号作品解密接口](../视频号/视频号作品解密.md)现在可以接受一个64位的decodeKey，可以用于解密朋友圈视频（含缩略图）、图片。   - 发布3.9.10版本的[1.0.4.f1]()

--- a/doc/readme/立即试用.md
+++ b/doc/readme/立即试用.md
@@ -12,7 +12,7 @@
 
 ## 📞申请试用
 
-1. TG: [@wechatapibot](https://t.me/wechatapibot)（自助机器人）
+1. TG: [@wechatapi_bot](https://t.me/wechatapi_bot)（自助机器人）
 2. Email: [goodluckapis@gmail.com](mailto:goodluckapis@gmail.com) 
    - 邮件标题为以下任一会自动回复试用资格(留联系方式，邮箱可能会不及时，推荐TG)：
    1. - WechatAPI申请试用-个人用户
