- **06月06日**：   - 扩大`http server`的工作线程数量，现在最大支持64个工作线程，此特性在未来可能会继续调整。   - 修复了一个Bug，该Bug曾导致：[数据库获取群聊列表](https://www.wechatsdk.com/docs/数据库/获取群聊列表.md)接口获取到的群聊不全，同时更新了[查询数据库](https://www.wechatsdk.com/docs/数据库/查询数据库.md)页面下的部分sql示例。   - 修改了记录日志的参数，现在写入的内容会尽快可见。   - 现在，在调用[cdn上传、cdn下载](https://www.wechatsdk.com/docs/CDN)接口时会尝试选择延迟最低的服务器。   - [发送消息](https://www.wechatsdk.com/docs/发送消息)和[CDN](https://www.wechatsdk.com/docs/CDN)分类下的接口已支持一个`bAsync`参数，如果将该参数设置为true，则任务不再阻塞，接口响应内容会通过消息处理器返回，消息推送类型为0，同时，如果提供了`asyncUserData`参数（该参数不限定类型），会随调用结果一起推送。   - 群聊事件推送进行了小幅度优化，添加了`subType`并将变更的成员和离开群聊的成员分开，此功能最近会尝试继续优化，以便监控自己的退群进群事件。   - [cdn上传、cdn下载](https://www.wechatsdk.com/docs/CDN)的可选类型已更新并添加了补充说明。   - ws服务器重启后前几条消息可能收不到，做了些优化可能会改善，但机制不能保证100%解决，最佳实践应该是避免重启服务器   - 发布3.9.10版本的[1.0.5]()

--- a/doc/readme/更新日志.md
+++ b/doc/readme/更新日志.md
@@ -1,5 +1,15 @@
 ## 📅 更新日志
 ### 2024年
+- **06月06日**：
+  - 扩大`http server`的工作线程数量，现在最大支持64个工作线程，此特性在未来可能会继续调整。
+  - 修复了一个Bug，该Bug曾导致：[数据库获取群聊列表](https://www.wechatsdk.com/docs/数据库/获取群聊列表.md)接口获取到的群聊不全，同时更新了[查询数据库](https://www.wechatsdk.com/docs/数据库/查询数据库.md)页面下的部分sql示例。
+  - 修改了记录日志的参数，现在写入的内容会尽快可见。
+  - 现在，在调用[cdn上传、cdn下载](https://www.wechatsdk.com/docs/CDN)接口时会尝试选择延迟最低的服务器。
+  - [发送消息](https://www.wechatsdk.com/docs/发送消息)和[CDN](https://www.wechatsdk.com/docs/CDN)分类下的接口已支持一个`bAsync`参数，如果将该参数设置为true，则任务不再阻塞，接口响应内容会通过消息处理器返回，消息推送类型为0，同时，如果提供了`asyncUserData`参数（该参数不限定类型），会随调用结果一起推送。
+  - 群聊事件推送进行了小幅度优化，添加了`subType`并将变更的成员和离开群聊的成员分开，此功能最近会尝试继续优化，以便监控自己的退群进群事件。
+  - [cdn上传、cdn下载](https://www.wechatsdk.com/docs/CDN)的可选类型已更新并添加了补充说明。
+  - ws服务器重启后前几条消息可能收不到，做了些优化可能会改善，但机制不能保证100%解决，最佳实践应该是避免重启服务器
+  - 发布3.9.10版本的[1.0.5]()
 - **05月29日**：
   - 尝试修复一个Bug，该Bug曾导致：个别电脑消息发送量大时出现消息阻塞的情况。（该现象与电脑配置有关）
   - 优化API:[检测链接是否被封禁](https://www.wechatsdk.com/docs/安全/检测链接是否被封禁.md)。
