--- a/doc/发送消息/发送位置.md
+++ b/doc/发送消息/发送位置.md
@@ -21,6 +21,8 @@
 | poiName       | 是  | string | 地理位置信息(小)   |   
 | poiId         | 是  | string | 腾讯地图ID      |   
 | isFromPoiList | 是  | bool   | 是否来自poilist |   
+| bAsync        | 否  | bool   | 如果将该参数设置为true，则任务不再阻塞，接口响应内容会通过消息处理器返回，消息推送类型为0<br/>如果提供了asyncUserData参数，会随调用结果一起推送 |   
+| asyncUserData | 否  | str    | xxxx                                                                                |   
 
 #### 请求示例
 
