--- a/doc/发送消息/发送引用消息.md
+++ b/doc/发送消息/发送引用消息.md
@@ -20,6 +20,8 @@
 | content        | 是  | string | 消息内容                              |   
 | sourceContent  | 是  | string | 引用的消息内容                           |   
 | atUserList     | 否  | list   | 仅当会话为群聊时可用，被艾特的用户wxid列表           |   
+| bAsync        | 否  | bool   | 如果将该参数设置为true，则任务不再阻塞，接口响应内容会通过消息处理器返回，消息推送类型为0<br/>如果提供了asyncUserData参数，会随调用结果一起推送 |   
+| asyncUserData | 否  | str    | xxxx                                                                                |   
 
 #### 请求示例
 
