--- a/doc/发送消息/发送文本.md
+++ b/doc/发送消息/发送文本.md
@@ -18,6 +18,8 @@
 | msgContent       | 是  | string | 文本内容                                                                     |   
 | atUserList       | 否  | list   | 被艾特wxid列表                                                                |   
 | insertToDatabase | 否  | bool   | 是否将消息回写到数据库中，默认为true，<br/>如果您发现某些电脑出现阻塞可设置为false<br/>该参数在1.0.4.f2及以上版本出现 |   
+| bAsync        | 否  | bool   | 如果将该参数设置为true，则任务不再阻塞，接口响应内容会通过消息处理器返回，消息推送类型为0<br/>如果提供了asyncUserData参数，会随调用结果一起推送 |   
+| asyncUserData | 否  | str    | xxxx                                                                                |   
 
 #### 请求示例
 
