--- a/doc/发送消息/发送链接.md
+++ b/doc/发送消息/发送链接.md
@@ -19,6 +19,8 @@
 | type     | 是  | int    | 接口编号    |   
 | userName | 是  | string | 接收人wxid |   
 | content  | 是  | string | 消息内容    |   
+| bAsync        | 否  | bool   | 如果将该参数设置为true，则任务不再阻塞，接口响应内容会通过消息处理器返回，消息推送类型为0<br/>如果提供了asyncUserData参数，会随调用结果一起推送 |   
+| asyncUserData | 否  | str    | xxxx                                                                                |   
 
 #### 请求示例
 
