--- a/doc/发送消息/转发图片.md
+++ b/doc/发送消息/转发图片.md
@@ -24,6 +24,8 @@
 | aeskey       | 是  | string | aeskey，cdn上传接口会返回该字段  |   
 | filecrc      | 是  | string | 文件校验值，cdn上传接口会返回该字段   |   
 | rawthumbsize | 是  | string | 缩略图文件大小，cdn上传接口会返回该字段 |   
+| bAsync        | 否  | bool   | 如果将该参数设置为true，则任务不再阻塞，接口响应内容会通过消息处理器返回，消息推送类型为0<br/>如果提供了asyncUserData参数，会随调用结果一起推送 |   
+| asyncUserData | 否  | str    | xxxx                                                                                |   
 
 #### 请求示例
 
