--- a/doc/发送消息/转发语音.md
+++ b/doc/发送消息/转发语音.md
@@ -19,6 +19,8 @@
 | fileid        | 是  | string | fileid，cdn上传接口会返回该字段   |   
 | aeskey        | 是  | string | aeskey，cdn上传接口会返回该字段   |   
 | voiceduration | 是  | string | 语音时长（ms），cdn上传接口会返回该字段 |   
+| bAsync        | 否  | bool   | 如果将该参数设置为true，则任务不再阻塞，接口响应内容会通过消息处理器返回，消息推送类型为0<br/>如果提供了asyncUserData参数，会随调用结果一起推送 |   
+| asyncUserData | 否  | str    | xxxx                                                                                |   
 
 #### 请求示例
 
