--- a/doc/数据库/查询数据库.md
+++ b/doc/数据库/查询数据库.md
@@ -50,11 +50,11 @@ select smallHeadImgUrl from ContactHeadImgUrl where usrName="filehelper";
 ```
 ```sql
 # 获取群聊列表，MicroMsg.db
-select * from Contact where Type=2;
+select * from Contact where Type&0xf=2;
 ```
 ```sql
 # 模糊搜索群聊信息，MicroMsg.db
-SELECT a.UserName,a.NickName,b.smallHeadImgUrl,c.RoomData,c.Reserved2 FROM Contact a INNER JOIN ContactHeadImgUrl b ON a.UserName=b.usrName INNER JOIN ChatRoom c ON c.ChatRoomName=a.UserName WHERE a.nickName like "%某不知名的群" AND a.Type=2;)
+SELECT a.UserName,a.NickName,b.smallHeadImgUrl,c.RoomData,c.Reserved2 FROM Contact a INNER JOIN ContactHeadImgUrl b ON a.UserName=b.usrName INNER JOIN ChatRoom c ON c.ChatRoomName=a.UserName WHERE a.nickName like "%某不知名的群" AND a.Type&0xf=2;)
 ```
 
 #### 返回参数说明 
