--- a/doc/发送消息/发送表情（无源）.md
+++ b/doc/发送消息/发送表情（无源）.md
@@ -17,6 +17,8 @@
 | userName  | 是  | string | 接收人wxid  |   
 | emojiMd5  | 是  | string | 表情包文件md5 |   
 | emojiSize | 否  | int    | 表情包文件大小  |   
+| bAsync        | 否  | bool   | 如果将该参数设置为true，则任务不再阻塞，接口响应内容会通过消息处理器返回，消息推送类型为0<br/>如果提供了asyncUserData参数，会随调用结果一起推送 |   
+| asyncUserData | 否  | str    | xxxx                                                                                |   
 
 #### 请求示例
 
