--- a/doc/发送消息/发送视频号消息.md
+++ b/doc/发送消息/发送视频号消息.md
@@ -18,6 +18,8 @@
 | userName      | 是  | string | 消息接收人wxid |   
 | objectId      | 是  | string | 作品Id      |   
 | objectNonceId | 是  | string | 作品NonceId |   
+| bAsync        | 否  | bool   | 如果将该参数设置为true，则任务不再阻塞，接口响应内容会通过消息处理器返回，消息推送类型为0<br/>如果提供了asyncUserData参数，会随调用结果一起推送 |   
+| asyncUserData | 否  | str    | xxxx                                                                                |   
 
 #### 请求示例
 
