--- a/doc/发送消息/转发视频.md
+++ b/doc/发送消息/转发视频.md
@@ -28,6 +28,8 @@
 | rawthumbsize   | 是  | string | 缩略图文件大小，cdn上传接口会返回该字段  |   
 | thumbheight    | 是  | string | 缩略图高度，cdn上传接口会返回该字段    |   
 | thumbwidth     | 是  | string | 缩略图宽度，cdn上传接口会返回该字段    |   
+| bAsync        | 否  | bool   | 如果将该参数设置为true，则任务不再阻塞，接口响应内容会通过消息处理器返回，消息推送类型为0<br/>如果提供了asyncUserData参数，会随调用结果一起推送 |   
+| asyncUserData | 否  | str    | xxxx                                                                                |   
 
 #### 请求示例
 
