- **06月24日**：   - [群公告](https://www.wechatsdk.com/zh/docs/群管理/设置群公告.md)接口修复bug。   - 新增[视频号信息](https://www.wechatsdk.com/zh/docs/个人信息/获取个人视频号信息.md)接口，用于获取自己的视频号注册信息。   - 尝试修复当前偶发崩溃问题。   - 发布3.9.10版本的[1.0.7.f1]() - **06月18日**：   - [CDN下载（新）](https://www.wechatsdk.com/zh/docs/CDN/CDN下载(新).md)接口小幅优化，当无法获取到目标dns时会尝试使用旧版dns，待收集更多信息后继续优化。   - [搜一搜](https://www.wechatsdk.com/zh/docs/公众号/搜一搜.md)接口现在支持按条件搜索，详情查看目标页面。   - [进入直播间](https://www.wechatsdk.com/zh/docs/直播间/进入直播间.md)接口现在需要提供finderUserName参数。   - 群聊事件推送优化，现在支持自己进群、退群，或被踢事件的推；现在，群成员进入和退出事件会分开推送，并已设置`subType`参数。   - 发布3.9.10版本的[1.0.7]() - **06月12日**：   - 新增一个[新的CDN下载](https://www.wechatsdk.com/zh/docs/CDN/CDN下载(新).md)接口，用于支持企业微信用户发送的信息，该接口也可用于下载普通用户发送的信息，该接口已支持异步调用；同时，CDN相关的接口添加了可选的`chatType`参数，0表示私聊消息，1表示群聊消息，默认为0。   - [视频号作品解密](https://www.wechatsdk.com/zh/docs/视频号/视频号作品解密.md)接口优化，现在`decodeKey`参数支持传递字符串。   - [获取朋友圈信息](https://www.wechatsdk.com/zh/docs/朋友圈/获取朋友圈信息.md)接口优化，现在`startObjectId`参数支持传递字符串，看后续反馈是否要对其他接口适用该优化。   - 尝试修复一个Bug，该Bug曾导致：短时间内重复[发送链接消息](https://www.wechatsdk.com/zh/docs/发送消息/发送链接.md)可能返回相同的消息id并且对方只接收到一条。   - 群聊事件推送已回滚（1.0.5优化的逻辑可能丢失退群事件）此功能最近会尝试继续优化。   - 编程化启动需关注：添加了一个实验性质的功能，该功能会在调用`start_http_server`时启动，用于增强防检测，请注意，该功能在启用后会导致卸载sdk时引发微信崩溃，所以务必在尝试卸载前调用`stop_http_server`进行清理。   - 编程化启动需关注：如何回调到提供的程序中，可以参考[进程内回调](https://www.wechatsdk.com/zh/docs/处理消息/进程消息处理器.md)中的示例代码。   - 发布3.9.10版本的[1.0.6]()

--- a/doc/直播间/进入直播间.md
+++ b/doc/直播间/进入直播间.md
@@ -11,12 +11,13 @@
 
 #### 参数
 
-| 参数名           | 必选 | 类型     | 说明                   |   
-|:--------------|:---|:-------|----------------------|   
-| type          | 是  | int    | 接口编号                 |   
-| liveId        | 是  | string | 直播间id                |   
-| objectId      | 是  | string | 作品id                 |   
-| objectNonceId | 是  | string | 作品nonceId            |   
+| 参数名            | 必选 | 类型     | 说明        |   
+|:---------------|:---|:-------|-----------|   
+| type           | 是  | int    | 接口编号      |   
+| liveId         | 是  | string | 直播间id     |   
+| objectId       | 是  | string | 作品id      |   
+| objectNonceId  | 是  | string | 作品nonceId |   
+| finderUserName | 否  | string | 视频号id     |   
 
 #### 请求示例
 
