--- a/doc/视频号/视频号作品解密.md
+++ b/doc/视频号/视频号作品解密.md
@@ -12,13 +12,13 @@
 
 #### 参数
 
-| 参数名        | 必选 | 类型     | 说明                                                                           |   
-|:-----------|:---|:-------|------------------------------------------------------------------------------|   
-| type       | 是  | int    | 接口编号                                                                         |   
-| inputFile  | 是  | string | 已下载的加密视频绝对路径，也可以是朋友圈视频或图片                                                    |   
-| outputFile | 是  | string | 保存解密文件的绝对路径，需要包含文件名                                                          |   
-| decodeKey  | 是  | int    | 获取作品列表接口会返回该字段或包含在朋友圈的xml中                                                   |   
-| encLength  | 是  | int    | 视频被加密的长度，下载视频时的header包含该字段，<br/>若是朋友圈图片视频这类等：文件大小小于131072，则传入文件大小，否则为：131072 |   
+| 参数名        | 必选 | 类型         | 说明                                                                           |   
+|:-----------|:---|:-----------|------------------------------------------------------------------------------|   
+| type       | 是  | int        | 接口编号                                                                         |   
+| inputFile  | 是  | string     | 已下载的加密视频绝对路径，也可以是朋友圈视频或图片                                                    |   
+| outputFile | 是  | string     | 保存解密文件的绝对路径，需要包含文件名                                                          |   
+| decodeKey  | 是  | int,string | 获取作品列表接口会返回该字段或包含在朋友圈的xml中                                                   |   
+| encLength  | 是  | int        | 视频被加密的长度，下载视频时的header包含该字段，<br/>若是朋友圈图片视频这类等：文件大小小于131072，则传入文件大小，否则为：131072 |   
 
 #### 常见问题
 
