- **07月01日**：   - http消息推送底层框架优化，在收到消息后，请返回状态码200提示接收消息成功，如果消息推送失败或状态码异常，则会记录到日志文件。   - `msgSvrID`字段推送优化，为不懂得如何处理大数字失真的开发者提供解决方案。     - 现在，在所有包含该字段的地方，会提供`szMsgSvrID`字段（如发送各类消息、推送hook的消息）。     - 为尽量保证字段名统一，推送自己通过微信界面发送的消息时，相关名称已从`msgSvrId`变更为`msgSvrID`，此更改可能需要您调整相关业务代码，请注意。   - 已对大多数接口所需的uint64类型参数（如[撤回消息](https://www.wechatsdk.com/zh/docs/发送消息/撤回消息.md)中的`msgSvrID`）进行优化，现在同时支持uint64类型和string类型（参数名无需改变）。   - 发布3.9.10版本的[1.0.9]() - **06月28日**：   - [群聊邀请验证](https://www.wechatsdk.com/zh/docs/群管理/群聊邀请验证.md)接口，新增`inviteType`参数，0：链接，1：二维码   - [获取A8Key](https://www.wechatsdk.com/zh/docs/公众号/获取A8Key.md)接口新增`urlFlag`参数，1：链接，37：二维码 其他类型后续有需要再支持   - http消息推送底层优化   - 发布3.9.10版本的[1.0.8.f2]() - **06月27日**：   - 网站API文档支持搜索功能 - **06月25日**：   - [获取用户信息接口](https://www.wechatsdk.com/zh/docs/通讯录/获取用户信息.md)可以提供为用户设置的描述信息，如果目标用户是群聊，新增返回字段：`chatroomMaxCount`指示当前群聊最大群成员数量，`chatroomAccessType`当前群聊验证方式(0：无验证，2：需要管理员验证，其他待补充)   - [发送引用消息](https://www.wechatsdk.com/zh/docs/发送消息/发送引用消息.md)现在可以正确处理消息源为企业微信用户的场景。   - [搜索用户](https://www.wechatsdk.com/zh/docs/通讯录/搜索用户.md)接口现在支持使用名片二维码中的信息作为关键词，并且如果包含微信号，会一并返回。   - [发送XML](https://www.wechatsdk.com/zh/docs/发送消息/发送XML.md)接口新增msgType字段作为可选参数。   - 修复了一个Bug，该Bug曾导致：一定条件下[获取小程序包下载地址](https://www.wechatsdk.com/zh/docs/小程序/获取小程序包下载地址.md)获取到的下载链接无效。   - 现在，如果扫码登录失败，会推送相关的信息。   - 发布3.9.10版本的[1.0.8]()

--- a/doc/readme/更新日志.md
+++ b/doc/readme/更新日志.md
@@ -1,5 +1,27 @@
 ## 📅 更新日志
 ### 2024年
+- **07月01日**：
+  - http消息推送底层框架优化，在收到消息后，请返回状态码200提示接收消息成功，如果消息推送失败或状态码异常，则会记录到日志文件。
+  - `msgSvrID`字段推送优化，为不懂得如何处理大数字失真的开发者提供解决方案。
+    - 现在，在所有包含该字段的地方，会提供`szMsgSvrID`字段（如发送各类消息、推送hook的消息）。
+    - 为尽量保证字段名统一，推送自己通过微信界面发送的消息时，相关名称已从`msgSvrId`变更为`msgSvrID`，此更改可能需要您调整相关业务代码，请注意。
+  - 已对大多数接口所需的uint64类型参数（如[撤回消息](https://www.wechatsdk.com/zh/docs/发送消息/撤回消息.md)中的`msgSvrID`）进行优化，现在同时支持uint64类型和string类型（参数名无需改变）。
+  - 发布3.9.10版本的[1.0.9]()
+- **06月28日**：
+  - [群聊邀请验证](https://www.wechatsdk.com/zh/docs/群管理/群聊邀请验证.md)接口，新增`inviteType`参数，0：链接，1：二维码
+  - [获取A8Key](https://www.wechatsdk.com/zh/docs/公众号/获取A8Key.md)接口新增`urlFlag`参数，1：链接，37：二维码 其他类型后续有需要再支持
+  - http消息推送底层优化
+  - 发布3.9.10版本的[1.0.8.f2]()
+- **06月27日**：
+  - 网站API文档支持搜索功能
+- **06月25日**：
+  - [获取用户信息接口](https://www.wechatsdk.com/zh/docs/通讯录/获取用户信息.md)可以提供为用户设置的描述信息，如果目标用户是群聊，新增返回字段：`chatroomMaxCount`指示当前群聊最大群成员数量，`chatroomAccessType`当前群聊验证方式(0：无验证，2：需要管理员验证，其他待补充)
+  - [发送引用消息](https://www.wechatsdk.com/zh/docs/发送消息/发送引用消息.md)现在可以正确处理消息源为企业微信用户的场景。
+  - [搜索用户](https://www.wechatsdk.com/zh/docs/通讯录/搜索用户.md)接口现在支持使用名片二维码中的信息作为关键词，并且如果包含微信号，会一并返回。
+  - [发送XML](https://www.wechatsdk.com/zh/docs/发送消息/发送XML.md)接口新增msgType字段作为可选参数。
+  - 修复了一个Bug，该Bug曾导致：一定条件下[获取小程序包下载地址](https://www.wechatsdk.com/zh/docs/小程序/获取小程序包下载地址.md)获取到的下载链接无效。
+  - 现在，如果扫码登录失败，会推送相关的信息。
+  - 发布3.9.10版本的[1.0.8]()
 - **06月24日**：
   - [群公告](https://www.wechatsdk.com/zh/docs/群管理/设置群公告.md)接口修复bug。
   - 新增[视频号信息](https://www.wechatsdk.com/zh/docs/个人信息/获取个人视频号信息.md)接口，用于获取自己的视频号注册信息。
