--- a/doc/readme/立即试用.md
+++ b/doc/readme/立即试用.md
@@ -16,7 +16,7 @@
 2. Email: [goodluckapis@gmail.com](mailto:goodluckapis@gmail.com)
     - 邮件标题为以下任一会自动回复试用资格(留联系方式，邮箱可能会不及时，推荐TG)：
     1. - WechatAPI申请试用-个人用户
-    2. - WechatAPI申请试用-企业用户trade
+    2. - WechatAPI申请试用-企业用户
 3. QQ: 暂时关闭
 4. 微信: 暂时关闭
 
